# SynthCodeESPIDF

./: .gitignore  AK4619VN_constants.backup  CMakeLists.txt  README.md  example_processer.cpp  lut_generator.py  reg_goals.txt  sdkconfig
main/: AK4619VN.cpp  AK4619VN.hpp  AK4619VN_buffers.cpp  AK4619VN_buffers.hpp  AK4619VN_constants.h  AK4619VN_constants.hpp  AK4619VN_input.cpp  AK4619VN_input.hpp  Buffers.cpp  Buffers.hpp  CMakeLists.txt  CanQueue.cpp  CanQueue.hpp  Processor.hpp  TwaiQueue.cpp  TwaiQueue.hpp  XPT2046.cpp  XPT2046.hpp  XPT4026.hpp  approx.h  buf.h  debug.cpp  debug.hpp  disp_spi.cpp  disp_spi.hpp  globals.h  idf_component.yml  ili9488.cpp  ili9488.hpp  main.cpp  main.h  main.hpp  peripheral_cfg.h  peripheral_cfg.hpp  peripheral_cfg_pcb.h  peripheral_cfg_prototype.h  peripheral_cfg_prototype.hpp  processor_factory.cpp  processor_factory.hpp  screen.cpp  (+5 more)
main/processors/: LFO.cpp  LFO.hpp  VCA.cpp  VCA.hpp  VCO.cpp  VCO.hpp  basics.cpp  basics.hpp  env_gen.cpp  env_gen.hpp  oscillator.cpp  oscillator.hpp  resonant_filter.cpp  resonant_filter.hpp
main/ui/: ui.c  ui.cpp  ui.h  ui.hpp
main/ui/components/arc/: arc.xml  arc_gen.c  arc_gen.cpp  arc_gen.h
main/ui/components/checkbox/: checkbox.xml  checkbox_gen.c  checkbox_gen.cpp  checkbox_gen.h
main/ui/components/column/: column_gen.c  column_gen.h
main/ui/components/effectslider/: effectslider.xml  effectslider_gen.c  effectslider_gen.cpp  effectslider_gen.h
main/ui/components/grid/: grid.xml  grid_gen.c  grid_gen.h
main/ui/components/header/: header.xml  header_gen.c  header_gen.h
(+24 files in other folders)
