idf_component_register(SRCS "debug.cpp" "touchscreen.cpp" "screen.cpp" "ili9488.cpp" "Buffers.cpp" "main.cpp" "AK4619VN.cpp" "xpt2046.cpp" 
                            "ui/components/arc/arc_gen.c" "ui/components/checkbox/checkbox_gen.c" "ui/components/column/column_gen.c" "ui/components/effectslider/effectslider_gen.c" "ui/components/grid/grid_gen.c" "ui/components/header/header_gen.c" "ui/components/icon/icon_gen.c" "ui/components/row/row_gen.c" "ui/components/subtitle/subtitle_gen.c" "ui/components/title/title_gen.c"
                            "ui/screens/effect/effect_gen.c" "ui/screens/home/home_gen.c" "ui/ui.c"
                    INCLUDE_DIRS ".")