idf_component_register(SRCS "TwaiQueue.cpp" "debug.cpp" "touchscreen.cpp" "screen.cpp" "ili9488.cpp" "Buffers.cpp" "main.cpp" "AK4619VN.cpp" 
                            "ui/ui.c" "ui/components/arc/arc_gen.c" "ui/components/checkbox/checkbox_gen.c" "ui/components/effectslider/effectslider_gen.c" "ui/components/number/number_gen.c"
                            "ui/components/subtitle/subtitle_gen.c" "ui/components/title/title_gen.c" "ui/screens/effect/effect_gen.c" "ui/screens/home/home_gen.c"
                            "xpt2046.cpp"  "processor_factory.cpp" "processors/basics.cpp" "processors/VCA.cpp" "processors/oscillator.cpp"
                    INCLUDE_DIRS ".")